[package]
name = "rd"
version = "0.1.0"
authors = ["Austin Graham <austingraham731@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dotenv = "0.15.0"
fern = "0.5.8"
log = "0.4.8"
chrono = {version = "0.4", features = ["serde"]}
