[package]
name = "rd"
version = "0.1.0"
authors = ["Austin Graham <austingraham731@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
fern = "0.5.8"
log = "0.4.8"
chrono = {version = "0.4", features = ["serde"]}
juniper = "0.10"
juniper_rocket = "0.2.0"
rocket = "0.4.3"
dirs = "3.0.1"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
duplicate = "0.2.9"
